// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Array 1`] = `
{
  "error": "PENDING",
  "inputs": [
    [
      [Function],
      [Function],
      [Function],
    ],
  ],
  "label": "results are different",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [
    [Function],
    [Function],
    [Function],
  ],
  "result": [
    [Function],
  ],
}
`;

exports[`brute force Number 1`] = `
{
  "error": {
    "message": "1 is not a list",
    "type": "Error",
  },
  "inputs": [
    1,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [
    undefined,
  ],
  "result": "PENDING",
}
`;

exports[`brute force Promise 1`] = `
{
  "error": {
    "message": "[object Promise] is not a list",
    "type": "Error",
  },
  "inputs": [
    Promise {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [
    undefined,
  ],
  "result": "PENDING",
}
`;

exports[`brute force RegExp 1`] = `
{
  "error": {
    "message": "/foo/g is not a list",
    "type": "Error",
  },
  "inputs": [
    /foo/g,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": [
    undefined,
  ],
  "result": "PENDING",
}
`;
